# k_chat

./: pyproject.toml
src/kchat/kafka/: .prod.py.swp  con.py  con_chat.py  p_chat.py  prod.py
