[project]
name = "kchat"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mangG907", email = "mang.gee@gmail.com"},
]
dependencies = [
    "kafka-python>=2.0.2",
    "tqdm>=4.66.5",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
]
